--- a/src/math/Cargo.toml
+++ b/src/math/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 authors = ["Lucas Bittencourt <lbittencs@gmail.com>"]
 
 [dependencies]
+glm="*"
+num="*"
+clippy = "0.0.42" #rustc 1.8.0-nightly (57c357d89 2016-02-16)
