Rust stable support. DynamicTree, Material, Mesh, Vertex and resources classes added. Tentative changes to the design of the ecs module.

--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -4,3 +4,17 @@ version = "0.1.0"
 authors = ["Lucas Bittencourt <lbittencs@gmail.com>"]
 
 [dependencies]
+num = "*"
+glium = "*"
+mopa = "0.2.0"
+
+[dependencies.luck_ecs]
+path = "../ecs/"
+version = "*"
+
+[dependencies.luck_math]
+path = "../math/"
+version = "*"
+
+[dependencies.wavefront_obj]
+git = "https://github.com/PistonDevelopers/wavefront_obj"
